# two-step-verification

./: README.md  pyproject.toml
tinysam/: build_sam.py  hierarchical_mask_generator.py
two_step_verification/: __init__.py  mps_backend.py  sd.py  tiny_sam.py  webcam.py
weights/: README.md
